# Lead-Planner

./: .gitignore  README.md  lead-planner-v2-COMPACT.md  lead-planner.md
agents/: lead-planner-v2.md
agents/lead-planner/: lead-planner-v3.md
examples/ratelimiter/: chat.md  rate_limiter.py  test_rate_limiter.py
graph/: .env  .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt  workflow-graph.md  workflow.yaml
graph/lead_planner_graph/: __init__.py  app.py  builder.py  config.py  fake_llm.py  little_coder.py  llm.py  nodes.py  routers.py  run.py  state.py  tui.py
graph/lead_planner_graph/llm/: __init__.py  fake.py  lmstudio.py
graph/lead_planner_graph/llm/framework/: __init__.py  base.py  parsing.py
graph/lead_planner_graph/nodes/: __init__.py  agent.py  delegate.py  review.py
graph/lead_planner_graph/nodes/framework/: __init__.py  deps.py  little_coder.py  registry.py  toolkit.py
graph/lead_planner_graph/routers/: __init__.py  planning.py  review.py
graph/lead_planner_graph/routers/framework/: __init__.py  registry.py
graph/phases/: delegating-to-little-coder.md  intent-extraction.md  planning-artifacts.md  report.md  reviewing-and-fixing.md  system.md
graph/tests/: test_smoke.py
rules/: tool-use.md
skills/delegating-to-little-coder/: SKILL.md
skills/intent-extraction/: SKILL.md
skills/planning-artifacts/: SKILL.md
skills/reviewing-and-fixing/: SKILL.md
