[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-planner-graph"
version = "0.1.0"
description = "Config-driven LangGraph engine for the lead-planner orchestrator."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0,<2.0",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "textual>=0.80",
    "rich>=13.0",
]

[project.optional-dependencies]
# `pip install -e ".[dev]"` pulls in the visual dev server + tests.
dev = [
    "langgraph-cli[inmem]>=0.4",
    "pytest>=8.0",
]

[project.scripts]
lead-planner = "lead_planner_graph.run:main"

[tool.setuptools]
packages = ["lead_planner_graph"]
